deploy: JeffeyChou/CV@acb52ceb7a7ff8978bc8a149fc9b089cda184b50

--- a/1/index.html
+++ b/1/index.html
@@ -533,7 +533,7 @@
             
             <a class="trm-op-top trm-anima-link" href="/3/">
                 <span class="trm-op-cover">
-                    <img alt="cover" class="no-fancybox" src="/img/block.jpg">
+                    <img alt="cover" class="no-fancybox" src="https://i.imgur.com/m52ofJC.jpg">
                 </span>
                 <h6 class="trm-op-title">南门探店-小煲贝</h6>
             </a>
@@ -552,17 +552,17 @@
     <div class="trm-older-publications-card trm-scroll-animation trm-active-el" data-scroll="" data-scroll-offset="40">
         <div class="trm-older-publication">
             
-            <a class="trm-op-top trm-anima-link" href="/6941/">
+            <a class="trm-op-top trm-anima-link" href="/18989/">
                 <span class="trm-op-cover">
-                    <img alt="cover" class="no-fancybox" src="/img/block.jpg">
+                    <img alt="cover" class="no-fancybox" src="https://pic1.zhimg.com/v2-01c04f5f1605aaa117306a7708a070a5_r.jpg">
                 </span>
-                <h6 class="trm-op-title">从零开始使用便宜VPS搭建自己的梯子，开启CDN后可以油管4k</h6>
+                <h6 class="trm-op-title">2.5 关于胡鑫宇案件的思考</h6>
             </a>
             <div class="trm-divider trm-mb-15 trm-mt-20"></div>
             <ul class="trm-card-data trm-label">
-                <li>23/01/30</li>
-                <li>10:22</li>
-                <li>VPS</li>
+                <li>23/02/04</li>
+                <li>15:20</li>
+                <li>Unclassified</li>
             </ul>
         </div>
     </div>
