--- a/45138/index.html
+++ b/45138/index.html
@@ -554,7 +554,7 @@
             
             <a class="trm-op-top trm-anima-link" href="/24452/">
                 <span class="trm-op-cover">
-                    <img alt="cover" class="no-fancybox" src="/img/block.jpg">
+                    <img alt="cover" class="no-fancybox" src="https://cdn.pixabay.com/photo/2016/11/18/12/55/light-1834289__480.jpg">
                 </span>
                 <h6 class="trm-op-title">Windows 11 安装WSA andorid 13 + play store + magisk</h6>
             </a>
@@ -575,7 +575,7 @@
             
             <a class="trm-op-top trm-anima-link" href="/37441/">
                 <span class="trm-op-cover">
-                    <img alt="cover" class="no-fancybox" src="/img/block.jpg">
+                    <img alt="cover" class="no-fancybox" src="https://cdn.pixabay.com/photo/2016/03/03/10/20/mathematics-1233876__480.jpg">
                 </span>
                 <h6 class="trm-op-title">电磁学-第一章 静电场</h6>
             </a>
