--- a/33022/index.html
+++ b/33022/index.html
@@ -573,7 +573,7 @@ U &= \frac{1}{2}\frac{Q^{2}}{C}=\frac{1}{2} CV^{2}=\frac{1}{2} QV
             <ul class="trm-card-data trm-label">
                 <li>23/02/08</li>
                 <li>16:40</li>
-                <li>Unclassified</li>
+                <li>Physics</li>
             </ul>
         </div>
     </div>
@@ -594,7 +594,7 @@ U &= \frac{1}{2}\frac{Q^{2}}{C}=\frac{1}{2} CV^{2}=\frac{1}{2} QV
             <ul class="trm-card-data trm-label">
                 <li>23/02/07</li>
                 <li>10:29</li>
-                <li>Unclassified</li>
+                <li>Physics</li>
             </ul>
         </div>
     </div>
