--- a/34514/index.html
+++ b/34514/index.html
@@ -743,7 +743,7 @@ c-16-25.333-24-45-24-59z'/></svg></span></span></span></span></span></span></spa
             <ul class="trm-card-data trm-label">
                 <li>23/02/09</li>
                 <li>15:08</li>
-                <li>Unclassified</li>
+                <li>Physics</li>
             </ul>
         </div>
     </div>
@@ -764,7 +764,7 @@ c-16-25.333-24-45-24-59z'/></svg></span></span></span></span></span></span></spa
             <ul class="trm-card-data trm-label">
                 <li>23/02/08</li>
                 <li>09:58</li>
-                <li>Unclassified</li>
+                <li>Physics</li>
             </ul>
         </div>
     </div>
