--- a/22328/index.html
+++ b/22328/index.html
@@ -557,7 +557,7 @@
             <ul class="trm-card-data trm-label">
                 <li>23/02/09</li>
                 <li>22:38</li>
-                <li>Unclassified</li>
+                <li>Physics</li>
             </ul>
         </div>
     </div>
@@ -578,7 +578,7 @@
             <ul class="trm-card-data trm-label">
                 <li>23/02/09</li>
                 <li>17:01</li>
-                <li>Unclassified</li>
+                <li>Physics</li>
             </ul>
         </div>
     </div>
