--- a/23401/index.html
+++ b/23401/index.html
@@ -566,7 +566,7 @@
             <ul class="trm-card-data trm-label">
                 <li>23/02/09</li>
                 <li>21:34</li>
-                <li>Unclassified</li>
+                <li>Physics</li>
             </ul>
         </div>
     </div>
@@ -587,7 +587,7 @@
             <ul class="trm-card-data trm-label">
                 <li>23/02/09</li>
                 <li>15:08</li>
-                <li>Unclassified</li>
+                <li>Physics</li>
             </ul>
         </div>
     </div>
