--- a/3/index.html
+++ b/3/index.html
@@ -514,7 +514,7 @@
             <ul class="trm-card-data trm-label">
                 <li>23/02/07</li>
                 <li>10:29</li>
-                <li>Unclassified</li>
+                <li>Physics</li>
             </ul>
         </div>
     </div>
