--- a/50048/index.html
+++ b/50048/index.html
@@ -681,7 +681,7 @@ e E_H=e v B \quad \Rightarrow E_H=v B \quad \Rightarrow U_H=E_H l=v B h</p>
             <ul class="trm-card-data trm-label">
                 <li>23/02/09</li>
                 <li>17:01</li>
-                <li>Unclassified</li>
+                <li>Physics</li>
             </ul>
         </div>
     </div>
@@ -702,7 +702,7 @@ e E_H=e v B \quad \Rightarrow E_H=v B \quad \Rightarrow U_H=E_H l=v B h</p>
             <ul class="trm-card-data trm-label">
                 <li>23/02/08</li>
                 <li>16:40</li>
-                <li>Unclassified</li>
+                <li>Physics</li>
             </ul>
         </div>
     </div>
